# grafana-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  mcp.example.json  mcp.json.example  pyproject.toml
grafana_mcp/: __init__.py  client.py  config.py
grafana_mcp/security/: __init__.py  validators.py
grafana_mcp/tools/: __init__.py  base.py  clusters.py  dashboards.py  datasources.py  folders.py
