[project]
name = "grafana-mcp"
version = "0.1.0"
description = "An MCP server for the comprehensive discovery, editing, and testing of dashboards and folders in one or more Grafana clusters."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.10.1",
]
